<resources>
    <string name="app_name">MyMarket</string>
    <string name="search">Rechercher... </string>
    <string name="Fruits">Fruits</string>
    <string name="Légumes">Légumes</string>
    <string name="Poissons">Poissons</string>
    <string name="Categories">Plus Vente</string>
    <string name="Promotions">Promotions</string>
    <string name="voirLesProduits">Voir tous les produits</string>
    <string name="voirPlus">Voir Plus</string>
    <string name="MonPanier">Mon Panier</string>
    <string name="Commander">Commandes</string>
    <string name="Enattente">En attente</string>
    <string name="Annulé">Annulé</string>
    <string name="Encours">En cours</string>
    <string name="Livré">Livré</string>
    <string name="All">All</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Category">Category</string>
    <string name="Panier">Panier</string>
    <string name="Commandes">Commandes</string>
    <string name="Droittimbre">Droit de timbre 0.29 dh</string>
    <string name="toolbar">toolbar</string>
    <string name="search_edittext">search edittext</string>
    <string name="back_button">back button</string>
    <string name="btn_arabic">Button arabic</string>
    <string name="btn_Francais">Button francais</string>
    <string name="MesInformations">Mes informations</string>
    <string name="aide">Besoin d aide?</string>
    <string name="Partager">Partager avec votre amis</string>
    <string name="Tousproduits">Tous les produits</string>
    <string name="DH"> DH</string>
    <string name="bottom_sheet_title">Complétez vos informations</string>
    <string name="bottom_sheet_subtitle">Ajouter l adresse de votre magasin</string>
    <string name="bottom_sheet_hint">Donner votre localisation</string>
    <string name="save_button">Enregistrer</string>
    <string name="title_mes_informations">Mes Informations</string>
    <string name="modifier_avatar">Modifier l image ou l avatar</string>
    <string name="nom">Nom</string>
    <string name="nom_hint">Entrez votre nom</string>
    <string name="prenom">Prénom</string>
    <string name="prenom_hint">Entrez votre prénom</string>
    <string name="date">Date</string>
    <string name="date_hint">Entrez la date</string>
    <string name="ville">Ville</string>
    <string name="genre">Genre</string>
    <string name="informations_personnelles">Informations Personnelles</string>
    <string name="afficher_informations">Afficher les informations personnelles</string>
    <string name="email">Email</string>
    <string name="email_hint">Entrez votre email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_hint">Entrez votre mot de passe</string>
    <string name="modifier">Modifier</string>
    <string name="commande_num_exemple">N 1243</string>
    <string name="commande_prix_total_exemple">Prix total: 250.0 DH</string>
    <string name="commande_date_exemple">2024-12-03</string>
    <string name="commande_categories_exemple">Catégories: 3</string>
    <string name="commande_status_exemple">En cours</string>
    <string name="icon_description">Icône de commande</string>
    <string name="logout">Se Deconnecter</string>
    <string name="memeCategory">Produits de meme catégorie</string>
    <string name="quantite">Quantite</string>
    <string name="prix">Prix</string>
    <string name="AjouterPanier">Ajouter au panier</string>
    <string name="StockInsifut">Stock insuffisant</string>
    <string name="ajouterAuPanier">Ajouté au panier !</string>
    <string name="added_to_cart">Est ajouté dans votre panier.</string>
    <string name="product_already_in_cart">Produit déjà dans le panier.</string>
    <string name="notifications">Notifications</string>
    <string name="order_information">Informations Commande</string>
    <string name="total">Total :</string>
    <string name="status">Statut :</string>
    <string name="articles">Articles :</string>
    <string name="order_added">La commande numéro %1$s bien ajoutée. En attente de livraison.</string>
    <string name="catAdd">Commande ajoutée.</string>
    <string name="order_cancelled_city_empty">Commande annulée, ville vide.</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="lunite">Vendu à l’unité</string>
    <string name="remove_from_cart">Voulez-vous supprimer %1$s du panier ?</string>
    <string name="product_removed">Le %1$s est supprimé dans votre panier.</string>
    <string name="cancel">Annuler</string>
    <string name="ok">OK</string>
    <string name="timeRest">Temps restant</string>
    <string name="personal_info">Information Personelle</string>
    <string name="enter_email">Entrer Votre Email</string>
    <string name="enter_password">Entrer Votre Password</string>
    <string name="next">Suivant</string>
    <string name="your_image">Votre Image</string>
    <string name="add_image">Ajouter votre Image</string>
    <string name="finish">Terminer</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="enter_name">Entrer Votre Nom</string>
    <string name="enter_surname">Entrer Votre Prénom</string>
    <string name="enter_birthdate">Entrer Votre Date de Naissance</string>
    <string name="select_city">Sélectionner votre ville</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="accept_conditions">Vous acceptez les présentes conditions générales d utilisation</string>
    <string name="back">Retour</string>
    <string name="go_shopping_from_home">Go Shopping From Home</string>
    <string name="login">LOGIN</string>
    <string name="signup">Signup</string>
</resources>