<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gardient_menu">

    <View
        android:id="@+id/handle"
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:background="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/bottomSheetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/titleColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_subtitle"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/addressInput"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:hint="@string/bottom_sheet_hint" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:textStyle="bold"
        android:backgroundTint="@color/buttoncolor"
        android:textColor="@color/Buttontext"
        android:text="@string/save_button"
        android:layout_marginTop="16dp" />
</LinearLayout>
