<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/fragement_recherche"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRecherche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        app:title=""
        android:layoutDirection="locale"
        android:contentDescription="@string/toolbar">

    <ImageButton
        android:id="@+id/retour"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layoutDirection="ltr"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button"/>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="8dp"
        android:hint="@string/search"
        android:padding="16dp"
        android:layoutDirection="inherit"
        android:textColor="#000000"
        android:textSize="16sp"
        android:contentDescription="@string/search_edittext"/>
</androidx.appcompat.widget.Toolbar>

<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_produit_recherche"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>