<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/your_image"
        android:textColor="@color/titleColor"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginBottom="20dp"
        android:background="@drawable/image_button_cercle"
        android:src="@drawable/ic_user"/>

    <TextView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/add_image"
        android:textColor="@color/titleColor"
        android:textSize="16sp" />

    <Button
        android:id="@+id/next"
        android:layout_width="182sp"
        android:layout_height="54sp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/finish"
        android:textStyle="bold"/>
</LinearLayout>
