<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/appbg"
        app:title=""
        android:layoutDirection="ltr"
        android:contentDescription="@string/toolbar">


        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:backgroundTint="@color/searchcolor"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:padding="16dp"
            android:textColor="@color/titleColor"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="false"
            android:layoutDirection="ltr"
            android:contentDescription="@string/search_edittext"/>
    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/all"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@color/appbg"
            android:textColor="@color/titleColor"
            android:text="@string/All"
            android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/under_all"
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:backgroundTint="@color/titleColor"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                android:id="@+id/encours"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:background="@color/appbg"
                android:textColor="@color/titleColor"
                android:text="@string/Encours"
                android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/under_encours"
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:backgroundTint="@color/titleColor"
                />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/enattents"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:background="@color/appbg"
                    android:textColor="@color/titleColor"
                    android:text="@string/Enattente"
                    android:layout_marginEnd="8dp"/>
                <View
                    android:id="@+id/under_enattents"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:backgroundTint="@color/titleColor"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/livre"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:background="@color/appbg"
                    android:textColor="@color/titleColor"
                    android:text="@string/Livré"
                    android:layout_marginEnd="8dp"/>
                <View
                    android:id="@+id/under_livre"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:backgroundTint="@color/titleColor"
                    />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_commandes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/appbg"/>

</LinearLayout>
