<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        app:title="">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MonPanier"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:background="@drawable/image_button_cercle"
            android:src="@drawable/ic_support"/>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclePanier"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_gravity="bottom"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00.00"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DH"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp" />
            </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/Droittimbre"
                    android:textStyle="italic"
                    android:gravity="end"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnCommander"
                    android:layout_width="400dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/Commander" />
            </LinearLayout>
    </FrameLayout>



</LinearLayout>