<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gardient_window"
        android:paddingTop="20dp"
        app:title="">

        <ImageButton
            android:id="@+id/user"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginRight="10dp"
            android:background="@drawable/image_button_cercle"
            android:src="@drawable/ic_user"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:src="@drawable/logo" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:background="@drawable/image_button_cercle"
            android:src="@drawable/ic_support"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:contentInsetStartWithNavigation="0dp"
        app:title="">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="16sp"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Promotions"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="start"
            android:textStyle="bold"  />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voirPlus"
            android:textSize="20dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorLogo"
            android:gravity="end"
            android:textStyle="italic" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categories"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="10sp"
                android:gravity="start"
                android:textStyle="bold"  />
            <TextView
                android:id="@+id/Lien_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voirPlus"
                android:textSize="20sp"
                android:clickable="true"
                android:layoutDirection="rtl"
                android:layout_marginRight="10sp"
                android:textColor="@color/colorLogo"
                android:gravity="end"
                android:textStyle="italic" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_plusVente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/TousProduits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:background="@drawable/edittext"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/voirLesProduits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:text=">" />
    </LinearLayout>

</LinearLayout>
</LinearLayout>